--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Author:
     person(given = "Johanne",
            family = "Lund",
            role = "aut",
-           email = "XXXXX"),
+           email = "johannemargrethelund@hotmail.dk"),
     person(given = "Marie",
            family = "Picquet",
            role = "aut",
